--- a/P.ipynb
+++ b/P.ipynb
@@ -2,13 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb931386",
+   "execution_count": 1,
+   "id": "f2f82409",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in d:\\farhad\\anacnda\\lib\\site-packages (3.5.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (1.21.5)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (9.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (1.4.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in d:\\farhad\\anacnda\\lib\\site-packages (from matplotlib) (4.25.0)\n",
+      "Requirement already satisfied: six>=1.5 in d:\\farhad\\anacnda\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install matplotlib"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6d7a01e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in d:\\farhad\\anacnda\\lib\\site-packages (1.4.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in d:\\farhad\\anacnda\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in d:\\farhad\\anacnda\\lib\\site-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in d:\\farhad\\anacnda\\lib\\site-packages (from pandas) (1.21.5)\n",
+      "Requirement already satisfied: six>=1.5 in d:\\farhad\\anacnda\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03db1bf3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
