--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f2f82409",
+   "id": "0385b96b",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d7a01e0",
+   "id": "913a28a8",
    "metadata": {},
    "outputs": [
     {
@@ -52,11 +52,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "133dbc75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in d:\\farhad\\anacnda\\lib\\site-packages (1.21.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "03db1bf3",
+   "id": "d8ed4b69",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install sklearn"
+   ]
   }
  ],
  "metadata": {
