--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0385b96b",
+   "id": "5074f8c6",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "913a28a8",
+   "id": "b06fdeae",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "133dbc75",
+   "id": "60469a63",
    "metadata": {},
    "outputs": [
     {
@@ -70,13 +70,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d8ed4b69",
+   "execution_count": 4,
+   "id": "0453aa1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sklearn in d:\\farhad\\anacnda\\lib\\site-packages (0.0.post1)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install sklearn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4e528274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn import datasets, linear_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1385db7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
