--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5074f8c6",
+   "id": "fe8f9512",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b06fdeae",
+   "id": "6834f1ae",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60469a63",
+   "id": "8a994e91",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0453aa1e",
+   "id": "243c228d",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4e528274",
+   "id": "06c1fa66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +102,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "d91a8c24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Skylight</th>\n",
+       "      <th>SQM</th>\n",
+       "      <th>Sitting</th>\n",
+       "      <th>Kitchen</th>\n",
+       "      <th>Balcony</th>\n",
+       "      <th>Rooms</th>\n",
+       "      <th>Services</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.10</td>\n",
+       "      <td>70.76</td>\n",
+       "      <td>28.4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>5.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.38</td>\n",
+       "      <td>70.78</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>5.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.59</td>\n",
+       "      <td>74.91</td>\n",
+       "      <td>24.3</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>13.6</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Skylight    SQM  Sitting  Kitchen  Balcony  Rooms  Services\n",
+       "0      6.10  70.76     28.4      6.0      1.9   11.2       5.6\n",
+       "1      7.38  70.78     19.6      6.0      2.1   12.2       5.6\n",
+       "2      7.59  74.91     24.3      6.5      2.3   13.6       5.7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "homeplan_data = pd.read_csv('C:/Users/POP RAYANEH/Desktop/MU/HP.csv')\n",
+    "homeplan_data.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c1385db7",
+   "id": "4da98b74",
    "metadata": {},
    "outputs": [],
    "source": []
