--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2d834e9f",
+   "id": "19bf83df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "58f7cedb",
+   "id": "5ba56dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "feb03cd7",
+   "id": "e2523e7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "61b924a4",
+   "id": "672d80f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5cff6591",
+   "id": "0534dc72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5e4961c0",
+   "id": "352c8b7a",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f87965aa",
+   "id": "88c080dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = homeplan_data.iloc[:,0:2]\n",
+    "y = homeplan_data.iloc[:,2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10f4e5a9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -153,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c5fd6e8",
+   "id": "8d520a6f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -161,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9af72fe6",
+   "id": "fa22b61c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e4090c",
+   "id": "bebebc58",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -177,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "148ea848",
+   "id": "a52d9548",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -185,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3e6763",
+   "id": "502ddb48",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50f5d3e5",
+   "id": "39db4a37",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -201,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "032f5a5c",
+   "id": "e13111aa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -209,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9d9c743",
+   "id": "9fc80970",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,15 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37394bc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1d7dd1a",
+   "id": "8e0b5d38",
    "metadata": {},
    "outputs": [],
    "source": []
