--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "212f9be2",
+   "id": "8fef8c18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f1f12e8d",
+   "id": "9263e7c8",
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "9aecd972",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = homeplan_data.iloc[:,0:2]\n",
+    "y = homeplan_data.iloc[:,2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1d16c0ee",
+   "id": "e6e2c701",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -113,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58feac1e",
+   "id": "d2923a02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -121,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc5c2b74",
+   "id": "94e7b921",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d83b15bd",
+   "id": "5954d59b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -137,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b18de1",
+   "id": "d553506c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c1c0e8",
+   "id": "dbf7b4da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -153,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1183fec8",
+   "id": "ba1d9499",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -161,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1350fa85",
+   "id": "0f02823c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f225132",
+   "id": "d13b77da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -177,15 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a800042d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25c9db47",
+   "id": "4aa547cc",
    "metadata": {},
    "outputs": [],
    "source": []
