--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8fef8c18",
+   "id": "fc635ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9263e7c8",
+   "id": "143cf3ee",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9aecd972",
+   "id": "4c27fb79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +115,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "b0250082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e6e2c701",
+   "id": "674c1a4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -124,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2923a02",
+   "id": "0a78dcbd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -132,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94e7b921",
+   "id": "7cd9c20b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5954d59b",
+   "id": "40d5cf96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d553506c",
+   "id": "9f5c12fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf7b4da",
+   "id": "4c49c237",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1d9499",
+   "id": "f25972ec",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f02823c",
+   "id": "68d73446",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -180,15 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d13b77da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4aa547cc",
+   "id": "9791195a",
    "metadata": {},
    "outputs": [],
    "source": []
