--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fc635ecb",
+   "id": "c98ed1ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "143cf3ee",
+   "id": "aa4a8fd7",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4c27fb79",
+   "id": "e4d975d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b0250082",
+   "id": "2bd4aff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,8 +126,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "4eae4703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-14.97273994,  -2.15706931,  -1.1215244 ,   4.35375205,\n",
+       "         5.29048844])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SLr = LinearRegression()\n",
+    "SLr.fit(x_train,y_train)\n",
+    "SLr.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "674c1a4c",
+   "id": "9d1883d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -135,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a78dcbd",
+   "id": "f08cea43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -143,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd9c20b",
+   "id": "8230ae8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -151,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d5cf96",
+   "id": "c5bffe35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -159,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5c12fb",
+   "id": "78c645c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -167,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c49c237",
+   "id": "839e6f0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f25972ec",
+   "id": "a75cbf12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -183,15 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d73446",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9791195a",
+   "id": "04f8ec38",
    "metadata": {},
    "outputs": [],
    "source": []
