--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c98ed1ad",
+   "id": "a44975ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "aa4a8fd7",
+   "id": "70865529",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e4d975d3",
+   "id": "14062001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2bd4aff9",
+   "id": "ea887de1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4eae4703",
+   "id": "43d66fb4",
    "metadata": {},
    "outputs": [
     {
@@ -150,8 +150,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "ab0579f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.10340984,  0.34142705],\n",
+       "       [ 0.18033933,  0.0865181 ],\n",
+       "       [-0.43087533,  0.07828945],\n",
+       "       [-3.43703249,  0.43099482],\n",
+       "       [ 0.00682465,  0.01537019]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SLr.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9d1883d7",
+   "id": "9bc35a4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -159,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f08cea43",
+   "id": "4b30ba71",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -167,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8230ae8f",
+   "id": "78e76c4b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5bffe35",
+   "id": "f2b60cfb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -183,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c645c3",
+   "id": "233d0347",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839e6f0e",
+   "id": "8e4452c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,15 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a75cbf12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04f8ec38",
+   "id": "bb73398c",
    "metadata": {},
    "outputs": [],
    "source": []
