--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a44975ad",
+   "id": "6becf8bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "70865529",
+   "id": "2ddfe972",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "14062001",
+   "id": "380aa8d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ea887de1",
+   "id": "4c307af0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "43d66fb4",
+   "id": "e0fe4cea",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ab0579f8",
+   "id": "9184a3d5",
    "metadata": {},
    "outputs": [
     {
@@ -175,8 +175,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "c37952fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics\n",
+    "y_pred = SLr.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9bc35a4f",
+   "id": "ea2f648b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -184,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b30ba71",
+   "id": "aa272137",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -192,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78e76c4b",
+   "id": "0ab062ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2b60cfb",
+   "id": "c0ef2170",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "233d0347",
+   "id": "9d07055f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -216,15 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e4452c4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb73398c",
+   "id": "02d0f7f9",
    "metadata": {},
    "outputs": [],
    "source": []
