--- a/P.ipynb
+++ b/P.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6becf8bf",
+   "id": "31eee737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2ddfe972",
+   "id": "20c0306e",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "380aa8d0",
+   "id": "9a8d8ced",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,29 +115,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4c307af0",
+   "execution_count": 35,
+   "id": "dac81c14",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.2)"
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "e0fe4cea",
+   "execution_count": 36,
+   "id": "4598b74d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-14.97273994,  -2.15706931,  -1.1215244 ,   4.35375205,\n",
-       "         5.29048844])"
+       "array([-4.66670013, -2.93549721, -1.72028464, -2.0064781 ,  6.19535677])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,21 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "9184a3d5",
+   "execution_count": 37,
+   "id": "b221d5c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.10340984,  0.34142705],\n",
-       "       [ 0.18033933,  0.0865181 ],\n",
-       "       [-0.43087533,  0.07828945],\n",
-       "       [-3.43703249,  0.43099482],\n",
-       "       [ 0.00682465,  0.01537019]])"
+       "array([[ 0.90261328,  0.35564959],\n",
+       "       [ 0.28981722,  0.08363712],\n",
+       "       [-0.36775126,  0.07798101],\n",
+       "       [-2.71190196,  0.42565239],\n",
+       "       [-0.17982995,  0.02093749]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c37952fc",
+   "execution_count": 38,
+   "id": "cf65d47c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +185,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "6e8c5138",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2: 0.9478347376615611\n",
+      "MAE: 3.357570602007429\n",
+      "MSE: 31.06754776006283\n",
+      "RMSE: 5.573827029973466\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('R2:',metrics.r2_score(y_test,y_pred))\n",
+    "print('MAE:',metrics.mean_absolute_error(y_test,y_pred))\n",
+    "print('MSE:',metrics.mean_squared_error(y_test,y_pred))\n",
+    "print('RMSE:',np.sqrt(metrics.mean_squared_error(y_test,y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ea2f648b",
+   "id": "2a65d629",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa272137",
+   "id": "745b72c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -203,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ab062ea",
+   "id": "83ae8526",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0ef2170",
+   "id": "4f7a27b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -219,15 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d07055f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02d0f7f9",
+   "id": "0ea47034",
    "metadata": {},
    "outputs": [],
    "source": []
